# python-cr

./: LICENSE.txt  pyproject.toml
src/analyzer/: __init__.py
src/dal/: location.py
src/lib/: httpsrv.py
src/service/: __init__.py
tests/: __init__.py
